--- a/CoCoworkView/MainWindow.xaml
+++ b/CoCoworkView/MainWindow.xaml
@@ -246,7 +246,13 @@
                     <RowDefinition/>
                 </Grid.RowDefinitions>
 
+              
                 <Button x:Name="AddPaymentButton" IsEnabled="{Binding AreButtonsAvailable}" Command="{Binding Payment.ChangePaymentVisibility}" Content="Добавить оплату" Grid.Column="1" Grid.Row="1" Margin="0, 30, 0, 0"/>
+                <Label Visibility="{Binding IsToolTipOn}" Grid.Column="1" Grid.Row="1" Margin="0, 30, 0, 0">
+                    <Label.ToolTip>
+                        <TextBlock>Для начала выберите заказ, к которому хотите добавить оплату, в списке.</TextBlock>
+                    </Label.ToolTip>
+                </Label>
                 <Label Name="ShowLabel" Content="Показать:" Grid.Column="1" Grid.Row="2" Margin="0, 15, 0, 15" VerticalAlignment="Bottom"/>
                 <StackPanel x:Name="CharacteristicsOfOrdersStackPanel" Grid.Row="3" Grid.Column="1" Grid.RowSpan="2" Margin="0, 10, 0, 10">
                     <CheckBox Content="Оплаченные" Margin="0, 5, 0, 0" IsChecked="{Binding ShowPaid}"/>
@@ -255,6 +261,11 @@
                     <CheckBox Content="Отменённые" Margin="0, 5, 0, 0" IsChecked="{Binding ShowCanceled}" IsEnabled="{Binding ShowCanceledAvailability}"/>
                 </StackPanel>
                 <Button x:Name="CancelOrderButton" Content="Отменить заказ" Grid.Column="1" Grid.Row="6" Margin="0, 0, 0, 30" IsEnabled="{Binding AreButtonsAvailable}"/>
+                <Label Visibility="{Binding IsToolTipOn}" Grid.Column="1" Grid.Row="6" Margin="0, 0, 0, 30">
+                    <Label.ToolTip>
+                        <TextBlock>Для начала выберите заказ, который хотите удалить, в списке.</TextBlock>
+                    </Label.ToolTip>
+                </Label>
             </Grid>
             <Grid x:Name="MainOrderGrid" Grid.Column ="0" Background="#FFE0DFDF" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                 <Grid.ColumnDefinitions>
