--- a/CoCoworkView/MainWindow.xaml
+++ b/CoCoworkView/MainWindow.xaml
@@ -223,6 +223,12 @@
                         <RowDefinition/>
                     </Grid.RowDefinitions>
                     <Label Content="Миниофис" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center" Margin="0 20 0 0" FontWeight="Bold" FontFamily="Academy Engraved LET Plain"/>
+                    <Label Content="Описание" Grid.Row="1" Margin="5 25 5 0" HorizontalAlignment="Center"/>
+                    <TextBox x:Name="Name"  Grid.Row="2" Margin="10, 0, 10, 30"/>
+                    <Label Content="Цена за день" Grid.Row="2" Margin="5 25 5 0" HorizontalAlignment="Center"/>
+                    <TextBox x:Name="PricePerDay"  Grid.Row="3" Margin="10, 0, 10, 30"/>
+                    <Label Content="Кол-во человек" Grid.Row="3" Margin="5 25 5 0" HorizontalAlignment="Center"/>
+                    <TextBox x:Name="AmountOfPeople"  Grid.Row="4" Margin="10, 0, 10, 30"/>
                     <Button x:Name="AddMiniOfficeButton" Command="{Binding ChangeMiniOfficeEditVisibility}" CommandParameter="{Binding MiniOfficeVM}"
                             Content="Добавить" Grid.Column="0" Grid.Row="7" Margin="15, 0, 15, 30"/>
                     <Button x:Name="EditFinallyMiniOfficeButton" Command="{Binding ChangeMiniOfficeEditVisibility}" CommandParameter="{Binding MiniOfficeVM}"
