--- a/CoCoworkView/MainWindow.xaml
+++ b/CoCoworkView/MainWindow.xaml
@@ -120,7 +120,7 @@
                 <Label Content="Компьютеры" HorizontalAlignment="Center" Grid.Column="2" Grid.Row="0" FontFamily="Arial Black"/>
 
                 <DataGrid x:Name="MiniOffices" AutoGenerateColumns="False" Margin="2 0 2 0" Grid.Column="0" Grid.Row="1" CanUserAddRows="False" 
-                      ItemsSource="{Binding MiniOffices}" SelectedItem="{Binding Path=MiniOfficeVM.SelectedItem, Mode=TwoWay}" ColumnWidth="*" CanUserDeleteRows="False">
+                      ItemsSource="{Binding MiniOffices}" SelectedItem="{Binding Path=MiniOfficeVM.SelectedMiniOffice, Mode=TwoWay}" ColumnWidth="*" CanUserDeleteRows="False">
                     <DataGrid.Resources>
                         <Style TargetType="{x:Type DataGridColumnHeader}">
                             <Setter Property="HorizontalContentAlignment" Value="Center"/>
@@ -133,7 +133,18 @@
                         <DataGridTextColumn Header="Описание"  Width="auto" Binding="{Binding Name}"/>
                         <DataGridTextColumn Header="Цена за день"  Width="auto" Binding="{Binding PricePerDay}"/>
                         <DataGridTextColumn Header="Кол-во мест"  Width="auto" Binding="{Binding AmountOfPlaces}"/>
+                        <DataGridTemplateColumn Header="Изменить" Width="auto">
+                            <DataGridTemplateColumn.CellTemplate>
+                                <DataTemplate>
+                                    <StackPanel Orientation="Horizontal">
+                                        <Button Content="Преобразовать в места" />
+                                        <Button Content="Сделать переговорной" />
+                                    </StackPanel>
+                                </DataTemplate>
+                            </DataGridTemplateColumn.CellTemplate>
+                        </DataGridTemplateColumn>
                     </DataGrid.Columns>
+
                 </DataGrid>
 
                 <DataGrid x:Name="Places" AutoGenerateColumns="False" Grid.Column="1" Margin="2 0 2 0" Grid.Row="1" CanUserAddRows="False" Grid.RowSpan="5"
@@ -224,12 +235,12 @@
                     </Grid.RowDefinitions>
                     <Label Content="Миниофис" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center" Margin="0 20 0 0" FontWeight="Bold" FontFamily="Academy Engraved LET Plain"/>
                     <Label Content="Описание" Grid.Row="1" Margin="5 25 5 0" HorizontalAlignment="Center"/>
-                    <TextBox x:Name="Name"  Grid.Row="2" Margin="10, 0, 10, 30"/>
+                    <TextBox x:Name="Name"  Grid.Row="2" Margin="10, 0, 10, 30" Text ="{Binding MiniOfficeVM.Name}"/>
                     <Label Content="Цена за день" Grid.Row="2" Margin="5 25 5 0" HorizontalAlignment="Center"/>
-                    <TextBox x:Name="PricePerDay"  Grid.Row="3" Margin="10, 0, 10, 30"/>
+                    <TextBox x:Name="PricePerDay"  Grid.Row="3" Margin="10, 0, 10, 30" Text ="{Binding MiniOfficeVM.PricePerDay}"/>
                     <Label Content="Кол-во человек" Grid.Row="3" Margin="5 25 5 0" HorizontalAlignment="Center"/>
-                    <TextBox x:Name="AmountOfPeople"  Grid.Row="4" Margin="10, 0, 10, 30"/>
-                    <Button x:Name="AddMiniOfficeButton" IsEnabled="{Binding MiniOfficeVM.IsAddButtonAvailable}" Command="{Binding ChangeMiniOfficeEditVisibility}" CommandParameter="{Binding MiniOfficeVM}"
+                    <TextBox x:Name="AmountOfPlaces" Grid.Row="4" Margin="10, 0, 10, 30" Text ="{Binding MiniOfficeVM.AmountOfPlaces}"/>
+                    <Button x:Name="AddMiniOfficeButton" IsEnabled="{Binding MiniOfficeVM.IsAddButtonAvailable}" Command="{Binding MiniOfficeVM.AddMiniOffice}"
                             Content="Добавить" Grid.Column="0" Grid.Row="7" Margin="15, 0, 15, 30"/>
                     <Button x:Name="EditFinallyMiniOfficeButton" Command="{Binding ChangeMiniOfficeEditVisibility}" CommandParameter="{Binding MiniOfficeVM}"
                             Content="Редактировать" Grid.Column="0" Grid.Row="8" Margin="15, 0, 15, 30" IsEnabled="{Binding MiniOfficeVM.IsEditButtonAvailable}"/>
@@ -271,7 +282,7 @@
                     <RowDefinition/>
                 </Grid.RowDefinitions>
 
-              
+
                 <Button x:Name="AddPaymentButton" IsEnabled="{Binding AreButtonsAvailable}" Command="{Binding Payment.ChangePaymentVisibility}" Content="Добавить оплату" Grid.Column="1" Grid.Row="1" Margin="0, 30, 0, 0"/>
                 <Label Visibility="{Binding IsToolTipOn}" Grid.Column="1" Grid.Row="1" Margin="0, 30, 0, 0">
                     <Label.ToolTip>
@@ -312,7 +323,7 @@
                     <Label Name="AmountLabel" Grid.Row="1" Grid.Column="1" Content="Введите сумму платежа:" Margin="2, 35, 2, 0"/>
                     <TextBox x:Name="AmountTextBox" Grid.Row="2" Grid.Column="1" Text ="{Binding Payment.Amount}" Margin="15, 15, 15, 15"/>
                     <Label Name="DateLabel" Grid.Row="3" Grid.Column="1" Content="Выберите дату:" Margin="2, 35, 2, 0"/>
-                    <DatePicker x:Name="PaymentDatePicker" Grid.Row="4" Grid.Column="1" SelectedDate ="{Binding Payment.PaymentDate}" Margin="15, 15, 15, 15"/> 
+                    <DatePicker x:Name="PaymentDatePicker" Grid.Row="4" Grid.Column="1" SelectedDate ="{Binding Payment.PaymentDate}" Margin="15, 15, 15, 15"/>
                     <Button x:Name="AddFinallyPaymentButton" IsEnabled="{Binding Payment.IsAddPaymentButtonAvailable}"  Command="{Binding Payment.ChangePaymentVisibility}" Content="Добавить оплату" Grid.Column="1" Grid.Row="6" Margin="15, 0, 15, 30"/>
                 </Grid>
             </Grid>
