--- a/CoCoworkView/MainWindow.xaml
+++ b/CoCoworkView/MainWindow.xaml
@@ -80,9 +80,6 @@
                 <Label Content="по" Grid.Column="0" Grid.Row="1" Margin="5 35 0 0" Grid.RowSpan="2"/>
                 <DatePicker Grid.Column="1" Grid.Row="1" Margin="0 37 0 160" Grid.RowSpan="4"/>
 
-                <Label Content="Редактирование:" Grid.Column="1" Grid.Row="2" FontWeight="Bold" 
-                       HorizontalContentAlignment="Center" Margin="0 20 0 10"/>
-
                 <Button x:Name="MiniOfficeEditButton" Content="Миниофисы" Grid.Column="1" Grid.Row="3"
                         Margin="0, 0, 0, 30" Command="{Binding MiniOfficeVM.ChangeMiniOfficeEditVisibility}"/>
                 <Button x:Name="PlaceEditButton" Content="Места" Grid.Column="1" Grid.Row="4"
@@ -233,19 +230,26 @@
                         <RowDefinition/>
                         <RowDefinition/>
                     </Grid.RowDefinitions>
-                    <Label Content="Миниофис" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center" Margin="0 20 0 0" FontWeight="Bold" FontFamily="Academy Engraved LET Plain"/>
-                    <Label Content="Описание" Grid.Row="1" Margin="5 25 5 0" HorizontalAlignment="Center"/>
-                    <TextBox x:Name="Name"  Grid.Row="2" Margin="10, 0, 10, 30" Text ="{Binding MiniOfficeVM.Name}"/>
-                    <Label Content="Цена за день" Grid.Row="2" Margin="5 25 5 0" HorizontalAlignment="Center"/>
-                    <TextBox x:Name="PricePerDay"  Grid.Row="3" Margin="10, 0, 10, 30" Text ="{Binding MiniOfficeVM.PricePerDay}"/>
-                    <Label Content="Кол-во человек" Grid.Row="3" Margin="5 25 5 0" HorizontalAlignment="Center"/>
-                    <TextBox x:Name="AmountOfPlaces" Grid.Row="4" Margin="10, 0, 10, 30" Text ="{Binding MiniOfficeVM.AmountOfPlaces}"/>
+                    <Label Content="Миниофисы" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center" Margin="0 20 0 0" FontWeight="Bold" FontFamily="Academy Engraved LET Plain"/>
+                    <Label Content="Описание" Grid.Row="1" Margin="5 0 5 0" HorizontalAlignment="Center"/>
+                    <TextBox x:Name="Name"  Grid.Row="1" Margin="10, 30, 10, 0" Text ="{Binding MiniOfficeVM.Name}"/>
+                    <Label Content="Цена в день" Grid.Row="2" Margin="5 0 5 0" HorizontalAlignment="Center"/>
+                    <TextBox x:Name="PricePerDay"  Grid.Row="2" Margin="10, 30, 10, 0" Text ="{Binding MiniOfficeVM.PricePerDay}"/>
+                    <Label Content="Вместимость/чел" Grid.Row="3" Margin="5 0 5 0" HorizontalAlignment="Center"/>
+                    <TextBox x:Name="AmountOfPlaces" Grid.Row="3" Margin="10, 30, 10, 0" Text ="{Binding MiniOfficeVM.AmountOfPlaces}"/>
+                    <Label Content="Цена в день за место" Grid.Row="4" Margin="5 0 5 0" HorizontalAlignment="Center"/>
+                    <TextBox x:Name="PlacePricePerDay" Grid.Row="4" Margin="10, 30, 10, 0" Text ="{Binding MiniOfficeVM.PlacePricePerDay}"/>
+                    <Label Content="Фикс цена/день за место" Grid.Row="5" Margin="5 0 5 0" HorizontalAlignment="Center"/>
+                    <TextBox x:Name="PlacePriceFixedPerDay" Grid.Row="5" Margin="10, 30, 10, 0" Text ="{Binding MiniOfficeVM.PlacePriceFixedPerDay}"/>
+                    <Label Content="Номер 1-го из мест" Grid.Row="6" Margin="5 0 5 0" HorizontalAlignment="Center"/>
+                    <TextBox x:Name="PlaceNumber" Grid.Row="6" Margin="10, 30, 10, 0" Text ="{Binding MiniOfficeVM.PlaceNumber}"/>
+
                     <Button x:Name="AddMiniOfficeButton" IsEnabled="{Binding MiniOfficeVM.IsAddButtonAvailable}" Command="{Binding MiniOfficeVM.AddMiniOffice}"
-                            Content="Добавить" Grid.Column="0" Grid.Row="7" Margin="15, 0, 15, 30"/>
-                    <Button x:Name="EditFinallyMiniOfficeButton" Command="{Binding ChangeMiniOfficeEditVisibility}" CommandParameter="{Binding MiniOfficeVM}"
-                            Content="Редактировать" Grid.Column="0" Grid.Row="8" Margin="15, 0, 15, 30" IsEnabled="{Binding MiniOfficeVM.IsEditButtonAvailable}"/>
-                    <Button x:Name="DeleteMiniOfficeButton" Command="{Binding MiniOfficeVM.DeleteMiniOffice}" CommandParameter="{Binding MiniOfficeVM}"
-                            Content="Удалить" Grid.Column="0" Grid.Row="9" Margin="15, 0, 15, 30" IsEnabled="{Binding MiniOfficeVM.IsDeleteButtonAvailable}"/>
+                            Content="Добавить" Grid.Column="0" Grid.Row="7" Margin="15, 10, 15, 20"/>
+                    <Button x:Name="EditFinallyMiniOfficeButton" Command="{Binding MiniOfficeVM.EditMiniOffice}" CommandParameter="{Binding MiniOfficeVM}"
+                            Content="Редактировать" Grid.Column="0" Grid.Row="8" Margin="15, 10, 15, 20" IsEnabled="{Binding MiniOfficeVM.IsEditButtonAvailable}"/>
+                    <Button x:Name="DeleteMiniOfficeButton" Command="{Binding MiniOfficeVM.DeleteMiniOffice}" Content="Удалить" Grid.Column="0"
+                            Grid.Row="9" Margin="15, 10, 15, 20" IsEnabled="{Binding MiniOfficeVM.IsDeleteButtonAvailable}"/>
                 </Grid>
             </Grid>
         </Grid>
